--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trường THPT Nguyễn Du</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Trường THPT Hàm Rồng</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo Trường THPT Nguyễn Du">
-            <h1>Trường THPT Nguyễn Du</h1>
+            <img src="picture/logo.png" alt="Logo Trường THPT Hàm Rồng">
+            <h1>Trường THPT Hàm Rồng</h1>
         </div>
         <div class="search">
             <input type="text" placeholder="Tìm kiếm...">
@@ -57,19 +57,19 @@
             <h2>Tin tức</h2>
             <div class="news-container">
                 <div class="news-item">
-                    <img src="news1.jpg" alt="Lễ khai giảng năm học mới">
+                    <img src="picture/1.png" alt="Lễ khai giảng năm học mới">
                     <h3>Lễ khai giảng năm học 2025-2026</h3>
-                    <p>Trường THPT Nguyễn Du tổ chức lễ khai giảng năm học mới với nhiều hoạt động ý nghĩa.</p>
+                    <p>Trường THPT Hàm Rồng tổ chức lễ khai giảng năm học mới với nhiều hoạt động ý nghĩa.</p>
                     <a href="#">Xem thêm</a>
                 </div>
                 <div class="news-item">
-                    <img src="news2.jpg" alt="Cuộc thi học sinh giỏi">
+                    <img src="picture/2.png" alt="Cuộc thi học sinh giỏi">
                     <h3>Học sinh đạt giải cao tại kỳ thi học sinh giỏi cấp tỉnh</h3>
                     <p>Đoàn học sinh của trường đạt 3 giải Nhất, 5 giải Nhì tại kỳ thi học sinh giỏi cấp tỉnh.</p>
                     <a href="#">Xem thêm</a>
                 </div>
                 <div class="news-item">
-                    <img src="news3.jpg" alt="Hội thảo hướng nghiệp">
+                    <img src="picture/3.png" alt="Hội thảo hướng nghiệp">
                     <h3>Hội thảo hướng nghiệp cho học sinh khối 12</h3>
                     <p>Nhà trường tổ chức hội thảo hướng nghiệp với sự tham gia của các chuyên gia hàng đầu.</p>
                     <a href="#">Xem thêm</a>
@@ -100,7 +100,7 @@
             <div class="contact-info">
                 <p>Địa chỉ: Số 123 Đường Lê Duẩn, Quận 1, Thành phố Hồ Chí Minh</p>
                 <p>Điện thoại: (028) 3829 1234</p>
-                <p>Email: info@thptnguyendu.edu.vn</p>
+                <p>Email: info@thpthamrong.edu.vn</p>
             </div>
         </section>
     </main>
@@ -108,14 +108,14 @@
     <footer>
         <div class="footer-info">
             <div>
-                <h3>Trường THPT Nguyễn Du</h3>
+                <h3>Trường THPT Hàm Rồng</h3>
                 <p>Nơi ươm mầm tri thức, phát triển tài năng</p>
             </div>
             <div>
                 <h3>Liên hệ</h3>
                 <p>Địa chỉ: Số 123 Đường Lê Duẩn, Quận 1, TP.HCM</p>
                 <p>Điện thoại: (028) 3829 1234</p>
-                <p>Email: info@thptnguyendu.edu.vn</p>
+                <p>Email: info@thpthamrong.edu.vn</p>
             </div>
             <div>
                 <h3>Mạng xã hội</h3>
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">© 2025 Trường THPT Nguyễn Du. Tất cả các quyền được bảo lưu.</p>
+        <p class="copyright">© 2025 Trường THPT Hàm Rồng. Tất cả các quyền được bảo lưu.</p>
     </footer>
 </body>
 </html>
